# text_locator

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml
cmake/Modules/: FindCCV.cmake  FindPNG.cmake  FindTESSERACT.cmake
include/text_locator/: TDetector.hpp  TRecognizer.hpp  Text2D.hpp  TextLocation.h  TextLocator.hpp  ccv.hpp  utils.hpp
launch/: text_locator.launch  text_locator.launch~
msg/: TextLocation.msg
src/: TDetector.cpp  TRecognizer.cpp  TextLocator.cpp  main.cpp
